<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_movie">

    <fragment
        android:id="@+id/nav_movie"
        android:name="com.reindra.submission4java.fragment.MovieFragment"
        android:label="@string/tab_text_1"
        tools:layout="@layout/fragment_movie" />


    <fragment
        android:id="@+id/nav_tv"
        android:name="com.reindra.submission4java.fragment.TVFragment"
        android:label="@string/tab_text_2"
        tools:layout="@layout/fragment_tv" />


    <fragment
        android:id="@+id/nav_fav"
        android:name="com.reindra.submission4java.fragment.favorite.FavFragment"
        android:label="@string/tab_text_3"
        tools:layout="@layout/fragment_favorite" />



</navigation>