<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="false"
    tools:context=".activity.DetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_bold"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            tools:text="@string/title" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.1"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.legacy.widget.Space
                android:id="@+id/space_poster"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_poster_detail"
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/inspect"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"

                android:src="@drawable/img_placeholder"
                android:transitionName="illusration"
                app:layout_collapseMode="parallax"
                app:layout_constraintBottom_toTopOf="@+id/tv_tittle_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="5dp" />

            <TextView
                android:id="@+id/tv_tittle_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/exo_bold"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster_detail" />

            <TextView
                android:id="@+id/tv_date_movie"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_16dp"
                android:fontFamily="@font/exo"
                android:text="@string/rating"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_tittle_detail" />

            <TextView
                android:id="@+id/tv_score_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_16dp"
                android:fontFamily="@font/exo"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_movie" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rb_score"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3.23"
                android:stepSize="0"
                android:theme="@style/RatingBar"
                app:layout_constraintBottom_toBottomOf="@id/tv_score_detail"
                app:layout_constraintStart_toEndOf="@id/tv_score_detail" />

            <ImageView
                android:id="@+id/iv_heartdetail"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:contentDescription="@string/desc_ic_heart"
                android:src="@drawable/ic_favorite"
                android:tint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_date_movie" />

            <TextView
                android:id="@+id/tv_country_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:text="@string/description"
                android:textColor="@color/blackSoft"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rb_score" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/margin_padding_16dp"
                android:layout_weight="1"
                android:fontFamily="@font/exo"
                android:justificationMode="inter_word"
                android:paddingBottom="@dimen/margin_padding_32dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.424"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rb_score" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>